# devsecops-toolbox

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  make_dist.ps1  pyproject.toml  pytest.ini  sync_repos.py
.github/workflows/: cd.yml  ci.yml  security.yml  tests.yml  version.yml
docs/: Pipelines CD.csv  Pipelines CI.csv  Plan_Trabajo_Pipeline_Health.md
scm/: ARCHITECTURE_ANALYSIS_PRO.md  README.md  __init__.py  config.json.template  main.py  requirements.txt  utils.py
scm/aws/: README.md  config.json.template  requirements.txt  tools.py
scm/aws/acm/: README.md  aws_acm_checker.py
scm/aws/cloudwatch/: README.md  aws_cloudwatch_checker.py
scm/aws/ec2/: README.md  aws_ec2_checker.py
scm/aws/ecr/: README.md  aws_ecr_checker.py
scm/aws/eks/: README.md  aws_eks_checker.py
scm/aws/elb/: README.md  aws_load_balancer_checker.py
scm/aws/iam/: README.md  aws_iam_checker.py  aws_roles_checker.py
scm/aws/lambda/: README.md  aws_lambda_checker.py
scm/aws/rds/: README.md  aws_rds_checker.py  aws_rds_storage_checker.py
scm/aws/vpc/: README.md  aws_security_groups_checker.py  aws_vpc_checker.py
scm/azdo/: README.md  README_task_validator.md  azdo-task-validador-optimized.sh  azdo_branch_policy_checker.py  azdo_pipeline_drift.py  azdo_pipeline_health_score.py  azdo_pr_master_checker.py  azdo_pr_pipeline_analyzer.py  azdo_release_cd_health.py  azdo_release_deep_dive.py  azdo_scan_pipeline_logs.py  azdo_scan_repos_vulnerabilities.py  azdo_task_validator.py  cicd_inventory.py  cicd_inventory_branches_created.py  cicd_inventory_cd_detailed.py  cicd_inventory_ci_detailed.py  cicd_inventory_gke_pipelines.py  cicd_inventory_health_score.py  cicd_inventory_hotfix_branches.py  cicd_inventory_pending_approvals.py  config.json.template  requirements.txt  tools.py
scm/gcp/: README.md  requirements.txt  tools.py
scm/gcp/artifact-registry/: README.md  extract-v2.sh  tag_filter.py
scm/gcp/certificate-manager/: README.md  gcp_certificate_checker.py
scm/gcp/cloud-armor/: README.md  gcp_cloud_armor_checker.py
scm/gcp/cloud-run/: README.md  gcp_cloudrun_checker.py
scm/gcp/cloud-sql/: README.md  gcp_database_checker.py  gcp_disk_checker.py  gcp_sql_comparator.py
scm/gcp/cluster-gke/: README.md  gcp_cluster_checker.py
scm/gcp/connectivity/: README.md  deploy_dependency_checker.py  deployment_validator.py  pod_connectivity_checker.py
scm/gcp/gateway-services/: README.md  gcp_gateway_checker.py
scm/gcp/inventory/: README.md  generar-inventario-csv-combinar-a-excel.py  generar-inventario-csv.config.template  generar-inventario-csv.py  generar-inventario-csv.sh  requirements.txt  run_inventory.py
scm/gcp/load-balancer/: README.md  gcp_load_balancer_checker.py
scm/gcp/monitoring/: README.md  gcp_monitor.py  gke_deployments_report.py  gke_monitor_node.py  gke_monitor_pod.py  requirements.txt
scm/gcp/notification/: README.md  template-webhooks.sh  webhooks.sh  webhooks_optimized.sh  webhooks_retail42.sh  webhooks_ssff42.sh
scm/gcp/reports-viewer/: README.md  gcp_reports_viewer.py
scm/gcp/rolesypermisos/: README.md  gcp_iam_roles_report.py  requirements.txt
scm/gcp/scripts-console/: README.md  check-certificate-report.sh  db_connections_checker.sh  deployments_last_news_list.sh  deployments_last_update_list.sh  deployments_recent_events_list.sh  (+1 more)
scm/terminal/: apigateway+httproute-commands.sh  check-certificate-report.sh  config.json.template  db-connections-checker.sh  deployments-last-news.sh  deployments-last-update.sh  deployments-recent-events.sh  tools.py
scm/tests/: __init__.py  conftest.py
scripts/: bump_version.py  sync-gcp.ps1
tests/: conftest.py
tests/integration/: __init__.py  test_cloud_apis.py
tests/mocks/: __init__.py  aws_mock.py  azdo_mock.py
tests/unit/: __init__.py  test_main.py
(+12 files in other folders)
