[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devsecops-toolbox"
version = "1.5.0"
description = "DevSecOps Toolbox - Herramientas unificadas para GCP, Azure DevOps y AWS"
readme = "scm/README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Harold Adrian", email = "harold@example.com"}
]
keywords = ["devsecops", "gcp", "azure", "aws", "cloud", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
]

dependencies = [
    "rich>=13.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "responses>=0.23.0",
    "moto>=4.0.0",
    "freezegun>=1.2.0",
]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/haroldadrian/devsecops-toolbox"
Repository = "https://github.com/haroldadrian/devsecops-toolbox"
Issues = "https://github.com/haroldadrian/devsecops-toolbox/issues"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=scm",
    "--cov-report=term-missing",
    "--cov-report=html:outcome/coverage_html",
    "--cov-report=xml:outcome/coverage.xml",
    "--tb=short",
]
markers = [
    "unit: Mark a test as a unit test",
    "integration: Mark a test as an integration test (may require cloud credentials)",
    "e2e: Mark a test as an end-to-end test",
    "slow: Mark a test as slow (excluded from quick runs)",
    "gcp: Mark a test as GCP-specific",
    "azdo: Mark a test as Azure DevOps-specific",
    "aws: Mark a test as AWS-specific",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["scm"]
omit = [
    "*/tests/*",
    "*/test_*",
    "scm/**/tools.py",
    "scm/**/config.json",
    "scm/**/config.json.template",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]
fail_under = 70

[tool.coverage.html]
directory = "outcome/coverage_html"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | \.env
  | build
  | dist
  | outcome
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".venv", "outcome", ".git"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
warn_redundant_casts = true
warn_unused_ignores = true
exclude = [
    "outcome",
    "\\.venv",
    "tests",
]
